--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,5 @@
 http_port: 8080
-db_connection_string: "root:password@tcp(127.0.0.1:3336)/noname?parseTime=true"
+db_connection_string: "sql12662095:SJbBnDL1w7@tcp(sql12.freemysqlhosting.net:3306)/sql12662095?parseTime=true"
 gorm_debug: true
 db_auto_migrate: true
 cors:
