--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "make deploy"
-  functions = "functions"
+  functions = "bin"
 [build.environment]
   # Change this path with the path to your repository
   GO_IMPORT_PATH = "github.com/ducanng/no-name"
