--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,7 @@
 [build]
   command = "make deploy"
-  functions = "functions"
-  publish = "./"
+  functions = "./functions"
 [build.environment]
   # Change this path with the path to your repository
   GO_IMPORT_PATH = "github.com/ducanng/no-name"
-  GO111MODULE = "on"
+  GOBIN = "/opt/build/repo/functions"
