--- a/netlify.toml
+++ b/netlify.toml
@@ -4,5 +4,5 @@
 [build.environment]
   # Change this path with the path to your repository
   GO_IMPORT_PATH="github.com/ducanng/no-name"
-  GO111MODULE=on
+  GO111MODULE="on"
   GOBIN="/opt/build/repo/functions"
