--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,7 @@
   # Change this path with the path to your repository
   GO_IMPORT_PATH="github.com/ducanng/no-name"
   GO111MODULE="on"
+[[redirects]]
+from="/*"
+to="/"
+status=200
